# open-road-editor

./: .gitignore  .gitmodules  README.md  pyproject.toml
.githooks/: pre-commit
examples/GbgSaroRound/: GbgSaroRound.ore  GbgSaroRound.osm  GbgSaroRound.xodr  GbgSaroRound_cleaned.orbsosm  GbgSaroRound_cleaned.ore  GbgSaroRound_cleaned.osm  GbgSaroRound_cleaned.xodr  GbgSaroRound_mini.ore  GbgSaroRound_mini.osm  GbgSaroRound_mini.xodr  input.ore  input.osm
open_road_editor/: __init__.py  cli.py  constants.py
open_road_editor/utils/: __init__.py  coords.py  map_context.py  tiles.py
open_road_editor/viewer/: __init__.py  _layers.py  _osm.py  _project.py  _shortcuts.py  _tiles.py  _xodr.py  _xodr_renderer.py  main.py
open_road_editor/widgets/: __init__.py  grid_item.py  osm_path_item.py  zoomable_view.py
scripts/: update_readme_links.py
